--- a/style.css
+++ b/style.css
@@ -4,6 +4,22 @@
     height: 400px;
 }
 
+.footer{
+    height: 320px;
+   
+    background-color: black;
+    color: aliceblue;
+}
+
+.footer-link{
+    padding-left: 100px;
+
+}
+
+.footer-2{
+    margin-top: px;
+}
+
 @media screen and (max-width:1399px){
     .custom{
         margin: 17px;
@@ -260,7 +276,21 @@
     }
 }
 
+@media screen and (max-width:767px){
+    .footer{
+        height: 500px;
+        
+    }
 
+}
+
+@media screen and (max-width:767px){
+    .footer-link{
+        padding-left: 15px;
+
+    }
+}
+    
 
 
 
